--- a/text_deciphering_jn.ipynb
+++ b/text_deciphering_jn.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(r'C:\\Users\\Alex\\MARGO\\crypto_labs\\lab2\\var7_1.txt', 'r', encoding='utf8', errors='ignore')\n",
+    "f = open(r'C:\\Users\\Alex\\MARGO\\crypto_labs\\lab2\\var7.txt', 'r', encoding='utf8', errors='ignore')\n",
     "text = f.read()\n",
     "f.close()"
    ]
