iterating over all possible pairs and finding all possible solutions for them

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "from textwrap import wrap\n",
-    "\n",
+    "from itertools import combinations\n",
     "\n",
     "#ъ -> ь \n",
     "ru_alph = ['а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й','к', 'л', 'м', 'н', 'о', 'п', \n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,34 +41,27 @@
     "        y = x1\n",
     "        return gcd,x,y\n",
     "    gcd, x, y = gcdExtended(a, m)\n",
-    "  #  print(\"gcd=\", gcd, \"x=\", x, \"y=\", y)\n",
-    "    # if gcd == 1:\n",
-    "    #     print((x % m + m) % m)\n",
-    "    # else:\n",
-    "    #     print(-1)\n",
-    "    d = 0\n",
     "    if gcd == 1:\n",
     "        if x < 0: \n",
     "            d = m + x\n",
     "        else: d = x % m\n",
-    "    else: d = 0; print(\"wrong numbers\")\n",
-    "#     print(\"d is\", d)\n",
+    "    else: d = -1 ; print(\"wrong numbers\")\n",
     "    return d\n",
     "\n",
     "#linear congruences solving. a*x = b (mod n)\n",
     "def congr(a, b, n):\n",
     "    d = math.gcd(a,n)\n",
-    "#     print(\"gcd=\", d)\n",
+    "    if d < 0:\n",
+    "        x = None ; print(\"there are no solutions\"); return x\n",
     "    if d == 1: \n",
     "        t = inv_by_mod(a, n)\n",
     "        x = [(b * t) %n]\n",
     "    else:\n",
-    "        if b % d !=0: x = [0]; print(\"there are no solutions\"); return x\n",
+    "        if b % d !=0: x = None ; print(\"there are no solutions\"); return x\n",
     "        else:\n",
     "            a1 = a // d\n",
     "            b1 = b // d\n",
     "            n1 = n // d\n",
-    "#             print(a1, b1, n1)\n",
     "            x = congr(a1, b1, n1)\n",
     "            for i in range(1, d):\n",
     "                z = (x[0] + i * n1) % n\n",
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +135,8 @@
     "    return res\n",
     "\n",
     "ct_bigrams_dict = find_most_fr_bi(\"07\") #5 most frequent bigrams if var 07\n",
-    "ct_bigrams_list = list(ct_bigrams_dict.keys()) #list of those bigrams (without freqs)\n",
-    "ru_bigrams_list = ['ст', 'но', 'то', 'на', 'ен'] #list of 5 vjst frequent bigrams in russian\n",
+    "Y_bigrams = list(ct_bigrams_dict.keys()) #list of those bigrams (without freqs)\n",
+    "X_bigrams = ['ст', 'но', 'то', 'на', 'ен'] #list of 5 vjst frequent bigrams in russian\n",
     "print(ct_bigrams_dict)"
    ]
   },
@@ -156,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +157,9 @@
      "output_type": "stream",
      "text": [
       "{'цл': 693, 'ял': 941, 'ае': 5, 'ле': 346, 'чо': 727}\n",
-      "{'ст': 545, 'но': 417, 'то': 572, 'на': 403, 'ен': 168}\n"
+      "[693, 941, 5, 346, 727]\n",
+      "{'ст': 545, 'но': 417, 'то': 572, 'на': 403, 'ен': 168}\n",
+      "[545, 417, 572, 403, 168]\n"
      ]
     }
    ],
@@ -179,22 +174,164 @@
     "\n",
     "def list_bigr_to_num(lst):\n",
     "    res = {}\n",
+    "    res_num = []\n",
     "    for item in lst:\n",
     "        res[item] = bigr_to_num(item)\n",
-    "    return res\n",
+    "        res_num.append(bigr_to_num(item))\n",
+    "    return res, res_num\n",
     "\n",
-    "Y = list_bigr_to_num(ct_bigrams_list)\n",
-    "X = list_bigr_to_num(ru_bigrams_list)\n",
-    "print(Y)\n",
-    "print(X)"
+    "Y, Y_nums = list_bigr_to_num(Y_bigrams)\n",
+    "X, X_nums = list_bigr_to_num(X_bigrams)\n",
+    "print(Y) #dictionary of ciphertext most freq bigrams \n",
+    "print(Y_nums) #only numbers from the dictionary\n",
+    "print(X) #dictionary of plaintext most freq bigrams \n",
+    "print(X_nums) #only numbers from the dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "iterating over all possible pairs (X*,X**)&(Y*,Y**) and finding all possible solutions for them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "there are no solutions\n",
+      "('ст', 'но')=('цл', 'ял') : [[899, 848]]\n",
+      "('ст', 'но')=('цл', 'ае') : [[606, 46]]\n",
+      "('ст', 'но')=('цл', 'ле') : [[761, 139]]\n",
+      "('ст', 'но')=('цл', 'чо') : [[255, 102]]\n",
+      "('ст', 'но')=('ял', 'ае') : [[668, 139]]\n",
+      "('ст', 'но')=('ял', 'ле') : [[823, 232]]\n",
+      "('ст', 'но')=('ял', 'чо') : [[317, 195]]\n",
+      "('ст', 'но')=('ае', 'ле') : [[155, 98]]\n",
+      "('ст', 'но')=('ае', 'чо') : [[610, 61]]\n",
+      "('ст', 'но')=('ле', 'чо') : [[455, 309]]\n",
+      "('ст', 'то')=('цл', 'ял') : [[899, 848]]\n",
+      "('ст', 'то')=('цл', 'ае') : [[544, 201]]\n",
+      "('ст', 'то')=('цл', 'ле') : [[699, 294]]\n",
+      "('ст', 'то')=('цл', 'чо') : [[286, 505]]\n",
+      "('ст', 'то')=('ял', 'ае') : [[606, 294]]\n",
+      "('ст', 'то')=('ял', 'ле') : [[761, 387]]\n",
+      "('ст', 'то')=('ял', 'чо') : [[348, 598]]\n",
+      "('ст', 'то')=('ае', 'ле') : [[155, 98]]\n",
+      "('ст', 'то')=('ае', 'чо') : [[703, 309]]\n",
+      "('ст', 'то')=('ле', 'чо') : [[548, 557]]\n",
+      "('ст', 'на')=('цл', 'ял') : [[93, 941]]\n",
+      "('ст', 'на')=('цл', 'ае') : [[641, 191]]\n",
+      "('ст', 'на')=('цл', 'ле') : [[889, 532]]\n",
+      "('ст', 'на')=('цл', 'чо') : [[284, 634]]\n",
+      "('ст', 'на')=('ял', 'ае') : [[548, 191]]\n",
+      "('ст', 'на')=('ял', 'ле') : [[796, 532]]\n",
+      "('ст', 'на')=('ял', 'чо') : [[191, 634]]\n",
+      "('ст', 'на')=('ае', 'ле') : [[248, 346]]\n",
+      "('ст', 'на')=('ае', 'чо') : [[604, 448]]\n",
+      "('ст', 'на')=('ле', 'чо') : [[356, 448]]\n",
+      "('ст', 'ен')=('цл', 'ял') : [[527, 817]]\n",
+      "('ст', 'ен')=('цл', 'ае') : [[894, 690]]\n",
+      "('ст', 'ен')=('цл', 'ле') : [[57, 380]]\n",
+      "('ст', 'ен')=('цл', 'чо') : [[576, 59]]\n",
+      "('ст', 'ен')=('ял', 'ае') : [[367, 814]]\n",
+      "('ст', 'ен')=('ял', 'ле') : [[491, 504]]\n",
+      "('ст', 'ен')=('ял', 'чо') : [[49, 183]]\n",
+      "('ст', 'ен')=('ае', 'ле') : [[124, 656]]\n",
+      "('ст', 'ен')=('ае', 'чо') : [[643, 335]]\n",
+      "('ст', 'ен')=('ле', 'чо') : [[519, 25]]\n",
+      "('но', 'то')=('цл', 'ял') : [[14, 621], [45, 187], [76, 714], [107, 280], [138, 807], [169, 373], [200, 900], [231, 466], [262, 32], [293, 559], [324, 125], [355, 652], [386, 218], [417, 745], [448, 311], [479, 838], [510, 404], [541, 931], [572, 497], [603, 63], [634, 590], [665, 156], [696, 683], [727, 249], [758, 776], [789, 342], [820, 869], [851, 435], [882, 1], [913, 528], [944, 94]]\n",
+      "('но', 'то')=('ае', 'ле') : [[27, 278], [58, 805], [89, 371], [120, 898], [151, 464], [182, 30], [213, 557], [244, 123], [275, 650], [306, 216], [337, 743], [368, 309], [399, 836], [430, 402], [461, 929], [492, 495], [523, 61], [554, 588], [585, 154], [616, 681], [647, 247], [678, 774], [709, 340], [740, 867], [771, 433], [802, 960], [833, 526], [864, 92], [895, 619], [926, 185], [957, 712]]\n",
+      "('но', 'на')=('цл', 'ял') : [[806, 941]]\n",
+      "('но', 'на')=('цл', 'ае') : [[461, 656]]\n",
+      "('но', 'на')=('цл', 'ле') : [[368, 36]]\n",
+      "('но', 'на')=('цл', 'чо') : [[684, 882]]\n",
+      "('но', 'на')=('ял', 'ае') : [[616, 656]]\n",
+      "('но', 'на')=('ял', 'ле') : [[523, 36]]\n",
+      "('но', 'на')=('ял', 'чо') : [[839, 882]]\n",
+      "('но', 'на')=('ае', 'ле') : [[868, 346]]\n",
+      "('но', 'на')=('ае', 'чо') : [[223, 231]]\n",
+      "('но', 'на')=('ле', 'чо') : [[316, 231]]\n",
+      "('но', 'ен')=('цл', 'ял') : [[713, 321]]\n",
+      "('но', 'ен')=('цл', 'ае') : [[161, 826]]\n",
+      "('но', 'ен')=('цл', 'ле') : [[781, 795]]\n",
+      "('но', 'ен')=('цл', 'чо') : [[710, 611]]\n",
+      "('но', 'ен')=('ял', 'ае') : [[409, 485]]\n",
+      "('но', 'ен')=('ял', 'ле') : [[68, 454]]\n",
+      "('но', 'ен')=('ял', 'чо') : [[958, 270]]\n",
+      "('но', 'ен')=('ае', 'ле') : [[620, 935]]\n",
+      "('но', 'ен')=('ае', 'чо') : [[549, 751]]\n",
+      "('но', 'ен')=('ле', 'чо') : [[890, 162]]\n",
+      "('то', 'на')=('цл', 'ял') : [[806, 941]]\n",
+      "('то', 'на')=('цл', 'ае') : [[368, 656]]\n",
+      "('то', 'на')=('цл', 'ле') : [[275, 36]]\n",
+      "('то', 'на')=('цл', 'чо') : [[250, 882]]\n",
+      "('то', 'на')=('ял', 'ае') : [[523, 656]]\n",
+      "('то', 'на')=('ял', 'ле') : [[430, 36]]\n",
+      "('то', 'на')=('ял', 'чо') : [[405, 882]]\n",
+      "('то', 'на')=('ае', 'ле') : [[868, 346]]\n",
+      "('то', 'на')=('ае', 'чо') : [[843, 231]]\n",
+      "('то', 'на')=('ле', 'чо') : [[936, 231]]\n",
+      "('то', 'ен')=('цл', 'ял') : [[713, 321]]\n",
+      "('то', 'ен')=('цл', 'ае') : [[192, 423]]\n",
+      "('то', 'ен')=('цл', 'ле') : [[812, 392]]\n",
+      "('то', 'ен')=('цл', 'чо') : [[214, 332]]\n",
+      "('то', 'ен')=('ял', 'ае') : [[440, 82]]\n",
+      "('то', 'ен')=('ял', 'ле') : [[99, 51]]\n",
+      "('то', 'ен')=('ял', 'чо') : [[462, 952]]\n",
+      "('то', 'ен')=('ае', 'ле') : [[620, 935]]\n",
+      "('то', 'ен')=('ае', 'чо') : [[22, 875]]\n",
+      "('то', 'ен')=('ле', 'чо') : [[363, 286]]\n",
+      "('на', 'ен')=('цл', 'ял') : [[93, 693]]\n",
+      "('на', 'ен')=('цл', 'ае') : [[52, 879]]\n",
+      "('на', 'ен')=('цл', 'ле') : [[300, 879]]\n",
+      "('на', 'ен')=('цл', 'чо') : [[98, 600]]\n",
+      "('на', 'ен')=('ял', 'ае') : [[920, 166]]\n",
+      "('на', 'ен')=('ял', 'ле') : [[207, 166]]\n",
+      "('на', 'ен')=('ял', 'чо') : [[5, 848]]\n",
+      "('на', 'ен')=('ае', 'ле') : [[248, 5]]\n",
+      "('на', 'ен')=('ае', 'чо') : [[46, 687]]\n",
+      "('на', 'ен')=('ле', 'чо') : [[759, 67]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_key_candidates(x_pairs, y_pairs):\n",
+    "    ans_dict = {}\n",
+    "    for i in range(len(x_pairs)):\n",
+    "        for j in range(len(y_pairs)):\n",
+    "            bi = f\"{x_pairs[i]}={y_pairs[j]}\"\n",
+    "            y1 = (Y[y_pairs[j][0]] - Y[y_pairs[j][1]]) % m**2\n",
+    "            x1 = (X[x_pairs[i][0]] - X[x_pairs[i][1]]) % m**2\n",
+    "            a = congr(x1,y1,m**2) #we have to find 'a' from x1*a=y1(mod m^2)\n",
+    "            if a == None: \n",
+    "                continue\n",
+    "            a_b = []\n",
+    "            for item in a:\n",
+    "                b = (Y[y_pairs[j][0]]- item * X[x_pairs[i][0]]) % m**2\n",
+    "                a_b.append([item, b])\n",
+    "            ans_dict[bi] = a_b\n",
+    "    return ans_dict\n",
+    "\n",
+    "x_pairs = list(combinations(X_bigrams, 2))\n",
+    "y_pairs = list(combinations(Y_bigrams, 2))\n",
+    "\n",
+    "pairs_solutions = find_key_candidates(x_pairs, y_pairs)\n",
+    "for i in pairs_solutions:\n",
+    "    print (i,':', pairs_solutions[i])"
+   ]
   }
  ],
  "metadata": {
